fixed gap in mobile navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -114,7 +114,7 @@ dl,ol,ul {
   .nav-menu {
     position: fixed;
     left: -100%;
-    top: 70px;
+    top: 65px;
     gap: 0;
     flex-direction: column;
     background-color: #02171b;
